@@ -19,6 +19,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 **** Fix "make install" with configure outside srcdir.  [Stefan Wallentowitz]
 
+**** Fix loop unroller out of memory; change --unroll-stmts.  [Ashutosh Das]
+
 **** Fix trace files with empty modules crashing some viewers.
 
 **** Fix parsing single files > 2GB.  [Jeffrey Short]
